--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,3 +1,15 @@
+svg g {
+  transform-origin: 50% 50%;
+  transform-box: fill-box;
+}
+
+.settingsWrap {
+  position: relative;
+  max-width: 1280px;
+  margin: 0 auto;
+  top: 0px;
+}
+
 .homeBanner {
 
   .homeBannerBackground {
@@ -39,35 +51,133 @@
 }
 
 .session {
+  position: relative;
   max-width: 1280px;
   margin: 0 auto;
   padding: 72px 0;
+
+  &>h2 {
+    text-align: center;
+  }
+
+  .titleLineWrapper {
+    width: 312px;
+    height: 2px;
+    margin: 24px auto 76px;
+    overflow: hidden;
+
+    .titleLine {
+      width: 64px;
+      height: 100%;
+      animation: 'titleLine' 3s ease-in-out 1.5s infinite;
+      -webkit-animation: 'titleLine' 3s ease-in-out 1.5s infinite;
+      transform: translateX(-64px);
+      background: linear-gradient(to right, rgba(24, 144, 255, 0) 0%, rgba(24, 144, 255, 1) 100%);
+    }
+  }
+
 }
 
+
 .feature {
-  padding-bottom: 0px;
 
-  .item {
+  &>.bg {
+    user-select: none;
+    font-size: 320px;
+    color: #ebedf0;
+    position: absolute;
+    width: 100%;
     text-align: center;
-    margin: 0 30px;
-    margin-bottom: 30px;
+    opacity: .25;
+    top: 0;
+    transform: translateY(0%);
+  }
 
-    .icon {
-      font-size: 48px;
+  .wrapper {
+    display: flex;
+    align-items: flex-start;
+
+    li {
+      width: 33.33%;
+      display: inline-block;
+      will-change: transform;
+
+      .box {
+        width: 194px;
+        margin: auto;
+        text-align: center;
+        position: relative;
+
+        .image {
+          width: 80px;
+          height: 80px;
+          border-radius: 40px;
+          margin: 20px auto 32px;
+          position: relative;
+          z-index: 1;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          background: #fff;
+          transition: box-shadow .3s ease-out, transform .3s ease-out;
+        }
+
+        &:hover .page1-image {
+          transform: translateY(-5px);
+        }
+
+        h3 {
+          color: #0d1a26;
+          font-size: 16px;
+          margin: 8px auto;
+        }
+      }
     }
 
-    .title {
-      margin-bottom: 12px;
-      font-size: 20px;
-      line-height: 1;
-      color: #333;
+    .pointWrapper {
+      position: absolute;
+      width: 0;
+      left: 50%;
+      top: 0;
+
+      :global {
+        .point-0 {
+          width: 4px;
+          height: 4px;
+        }
+
+        .point-2,
+        .point-ring {
+          width: 10px;
+          height: 10px;
+        }
+
+        .point-ring {
+          border-style: solid;
+          border-width: 1px;
+          background: transparent !important;
+        }
+
+        .point-1 {
+          width: 6px;
+          height: 6px;
+        }
+
+        .point-3 {
+          width: 15px;
+          height: 15px;
+        }
+
+        i {
+          display: inline-block;
+          border-radius: 100%;
+          position: absolute;
+          opacity: 0;
+          transform: translate(0, 30px);
+        }
+      }
     }
 
-    .desc {
-      color: #717484;
-      font-size: 14px;
-      line-height: 1.5;
-    }
   }
 }
 
@@ -86,7 +196,11 @@
 
   .item {
     margin: 0 auto;
-    padding: 0 30px;
+    padding: 0 30px 20px 0;
+
+    .title {
+      text-align: center;
+    }
   }
 
 }
